--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,5 @@ jobs:
         #<-- end of build job
       - name: Deploy
         run: npm run deploy
-        if: github.ref == 'ref/head/test' && github.event_name == 'push'
+        if: github.ref == 'refs/head/test' && github.event_name == 'push'
+          echo "deployed"
