--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,10 @@ jobs:
         run: npm ci
       - name: npm build
         run: npm run build
+      - name: Deploy
+        run: npm run deploy
+        if: github.ref == 'refs/heads/test' && github.event_name == 'push'
+          echo "deployed"
         #<-- end of build job
       
   test: #<--start of test encapsulation
