--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,7 @@ jobs:
         run: npm ci
       - name: npm build
         run: npm run build
-        #<-- end of build job
       - name: Deploy
         run: npm run deploy
         if: github.ref == 'refs/heads/test' && github.event_name == 'push'
-          echo "deployed"
+          echo "deployed" #<--end of build
