--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,37 +4,41 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:  #<--start of build encapsulation
-      - name: checkout
+    steps:
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: node setup
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 14
-      - name: install npm
-        run: npm install
-      - name: install dependencies
+
+      - name: Install dependencies
         run: npm ci
-      - name: npm build
+
+      - name: Build
         run: npm run build
-      - name: deploy
-        run: npm run deploy
+
+      - name: Deploy
         if: github.ref == 'refs/heads/test' && github.event_name == 'push'
-          echo "deployed"  #<-- end of build job
-      
-  test: #<--start of test encapsulation
+        run: |
+          npm run deploy
+          echo "deployed"
+
+  test:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v4
-    - name: node setup
-      uses: actions/setup-node@v4
-      with:
-        node-version: 14
-    - name: install npm
-      run: npm install
-    - name: install dependencies
-      run: npm ci
-    - name: npm build test
-      run: npm test
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
