--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,9 @@ jobs:
         with:
           node-version: 14
 
+      - name: Install npm
+        run: npm install
+        
       - name: Install dependencies
         run: npm ci
 
@@ -36,7 +39,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 14
-
+    
+      - name: Install npm
+        run: npm install
+        
       - name: Install dependencies
         run: npm ci
 
