--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ububtu-20.04]
+        os: [ubuntu-latest, ububtu-20.04]
         node: [18,20]
     runs-on: $ {{ matrix.os }}
     steps:
