--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,11 +24,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/my-web-app:latest .
+          docker build . --tag  ghcr.io/${{ github.repository_owner }}/hello:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/my-web-app:latest
+          docker push ghcr.io/${{ github.repository_owner }}/hello:latest
       
     
     
