--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build . --tag  ghcr.io/${{ github.repository_owner }}/hello:latest .
+          docker build --tag  ghcr.io/${{ github.repository_owner }}/hello:latest .
           docker push ghcr.io/${{ github.repository_owner }}/hello:latest
           
       
