--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 20
       - name: install
         run: npm run install
+      - name: build
+        run: npm run build
       - name: create release
         uses: softprops/action-gh-release@v2
         env:
