--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 20
       - name: install
-        run: npm run install
+        run: npm install
       - name: build
         run: npm run build
       - name: create release
